# cozy-automation-python

./: Dockerfile  LICENSE_THIRD_PARTIES  README.md  docker-compose.yaml  pyproject.toml  tox.ini
.github/workflows/: lint-build-deploy.yaml  redeploy.yaml
cozy/: __main__.py  bot.py  checks.py  constants.py
cozy/modules/: eval.py
cozy/modules/internals/: error_handler.py  logs.py  module_management.py
cozy/utils/: time.py
